Fix iOS layout bugs (#20)
- Prevent input labels from covering navigation bar
- Allow either comma or period as decimal separator
- Keep navigation bar fixed to bottom of viewport using flexbox
- Prevent table width from overflowing horizontally

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -1,6 +1,16 @@
+html, body {
+	height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
 }
